<resources>
    <string name="app_name">팝콘에어</string>
    <string name="coin_name">팝콘</string>
    <string name="igaworks_app_key">475888432</string>
    <string name="igaworks_hash_key">e249410e92eb4d3e</string>
    <string name="line_channel_id">1539966666</string>
    <string name="kakao_app_key">30eea54952db601925193ea530eaa384</string>
    <string name="facebook_app_id">1659169057730312</string>
    <string name="OAUTH_CLIENT_ID">gXNB2GutDy6vRhL2TE1h</string>
    <string name="OAUTH_CLIENT_SECRET">4RvoXdZhRY</string>
    <string name="appsflyer_app_id"></string>
    <string name="adbrix_app_id">2BVHslrx2E66QjPwxlFIPA</string>
    <string name="adbrix_app_secret_id">4Eu9vz6Ag0m4TeHQw8sw5Q</string>
    <string name="msg_error_network">네트워크가 원활하지 않습니다.\n인터넷 연결 상태를 확인하고 다시 시도해주세요.</string>
    <string name="msg_error_chat_failed">채팅 컨넥트 5회 시도 실패</string>
    <string name="msg_error_chat_certify">사용자 인증 정보가 부족합니다.</string>
    <string name="msg_error_login_overlap">회원 정보가 수정되어 로그아웃됩니다.</string>
    <string name="gcm_notification_channel_id">com.theenm.android.popkontv</string>
    <string name="gcm_notification_channel_name" formatted="false">%s 채널</string>
    <string name="gcm_notification_popup_name">팝업모드</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="shut_down">종료</string>
    <string name="retry">재시도</string>
    <string name="move">이동</string>
    <string name="re_login">다시 로그인하기</string>
    <string name="need_update" formatted="false">업데이트가 필요 합니다. 업데이트 화면으로 이동 하시겠습니까? (현재 버전 %s)</string>
    <string name="count" formatted="false">%s개</string>
    <string name="not_found">검색결과가 없습니다.</string>
    <string name="not_contents">해당 컨텐츠가 없습니다.</string>
    <string name="app_info">앱정보</string>
    <string name="app_version">버전</string>
    <string name="need_version">방송하기 기능은 안드로이드 버전 KitKat(4.4) 이상부터 지원 가능합니다.</string>
    <string name="admin_out">운영자가 방송을 차단하였습니다.</string>
    <string name="edit">편집</string>
    <string name="permission_request">필요한 권한이 설정 되어 있지 않습니다. 권한 설정후 다시 시도해 주세요.</string>
    <string name="other_device_login">다른기기에서 로그인 하였습니다.</string>
    <string name="loading">로딩중입니다. 잠시만 기다려 주세요.</string>
    <string name="nonmember">비회원</string>
    <string name="home">Home</string>
    <string name="live">Live</string>
    <string name="live_shop">LiveSHOP</string>
    <string name="vod">VOD</string>
    <string name="hotclip">Hot Clip</string>
    <string name="adult">19+</string>
    <string name="celuv">Celuv</string>
    <string name="news">News</string>
    <string name="ask_app_finish" formatted="false">%s를(을) 종료 하시겠습니까?</string>
    <string name="app_setup_msg">방송하기 APP이 설치되어있지 않습니다.\n설치를 원할시 아래 이동버튼을 클릭 후 설치 부탁드립니다.</string>
    <string name="ask_app_delete">제거되지 않은 이전 버전 앱이 존재합니다. 제거하시겠습니까?</string>
    <string name="password">비밀번호</string>
    <string name="do_login">로그인하기</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="input_id">아이디를 입력해주세요.</string>
    <string name="input_pwd">비밀번호를 입력해주세요.</string>
    <string name="login_success">로그인 하였습니다.</string>
    <string name="auto_login_fail">로그인이 실패하였습니다. 아이디와 비밀번호를 확인하세요.</string>
    <string name="space_filter">공백 문자는 입력할 수 없습니다.</string>
    <string name="desc_login">사이트를 이용하시려면 로그인 해주세요.</string>
    <string name="login_save_id">아이디 저장</string>
    <string name="login_find_id_password">아이디/비밀번호 찾기</string>
    <string name="login_join">회원가입</string>
    <string name="login_change_password">비밀번호 변경</string>
    <string name="change_password_text">새 비밀번호</string>
    <string name="change_password_cofirm_text">새 비밀번호 확인</string>
    <string name="change_password_text_hint">6~20자 영문, 숫자, 특수문자 사용</string>
    <string name="change_password_text_confirm_hint">비밀번호 한 번 더 입력</string>
    <string name="change_password_button_bg">변경하기</string>
    <string name="change_password_error_text_length">비밀번호는 6~20자 영문, 숫자, 특수문자만 사용 가능합니다.</string>
    <string name="change_password_error_text_empth">비밀번호 확인을 위해 한번 더 입력해 주세요.</string>
    <string name="change_password_error_text_diff">비밀번호 확인이 일치하지 않습니다.</string>
    <string name="change_password_success">정보가 변경 되었습니다.\n로그인 페이지로 이동합니다.</string>
    <string name="member_join_success">가입이 완료되었습니다.</string>
    <string name="member_certify_success">본인 인증이 완료되었습니다.</string>
    <string name="member_certify_fail">본인 인증이 실패되었습니다.</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="delete_bookmark">님을 즐겨찾기에서 삭제하시겠습니까?</string>
    <string name="off_air">현재 방송중이 아닙니다.</string>
    <string name="no_list">목록이 없습니다.</string>
    <string name="no_on_list">즐겨찾기한 방송자가 없습니다.</string>
    <string name="category_live">Live 방송</string>
    <string name="fan_channel">팬클럽 채널</string>
    <string name="tab_review">다시보기 컨텐츠</string>
    <string name="tab_fan_list">열혈팬</string>
    <string name="no_fan_list">열혈팬 목록이 없습니다.</string>
    <string name="none">없음</string>
    <string name="people" formatted="false">%s명</string>
    <string name="rank" formatted="false">%s위</string>
    <string name="add_bookmark">즐겨찾기 등록하였습니다.</string>
    <string name="remove_bookmark">즐겨찾기 해제하였습니다.</string>
    <string name="fan_join_success">팬클럽 가입에 성공하였습니다.</string>
    <string name="someone_fan_channel" formatted="false">%s님의 팬클럽 채널</string>
    <string name="fan_list">팬클럽 목록</string>
    <string name="mc_rank">MC순위</string>
    <string name="fan_count">팬 수</string>
    <string name="favorite_count">즐겨찾는 회원수</string>
    <string name="person_text">참여자 목록</string>
    <string name="book_mark_cnt">즐겨찾기 회원수</string>
    <string name="view_cnt">전체 재생수</string>
    <string name="good_cnt">전체 좋아요수</string>
    <string name="vod_cnt">동영상수</string>
    <string name="popkon_purchase" formatted="false">%s 구매</string>
    <string name="empty_fan_vod_list">해당 VOD가 없습니다.</string>
    <string name="empty_fan_list">열혈팬 목록이 없습니다.</string>
    <string name="review">다시보기</string>
    <string name="more_text">2자 이상 입력해 주세요.</string>
    <string name="search_hint">방제목/닉네임/ID를 검색해보세요.</string>
    <string name="search_direct_hint">검색어를 선택하시면 바로 검색이 됩니다.</string>
    <string name="watch_name">방송자</string>
    <string name="watch_join_cut">참여수</string>
    <string name="watch_recommend_cut">추천수</string>
    <string name="watch_bookmark_cut">즐찾수</string>
    <string name="watch_duplicate_id">시청할 수 없는 방송입니다.</string>
    <string name="start_broadcast">방송이 시작되었습니다.</string>
    <string name="broadcast_ended">방송이 종료되었습니다</string>
    <string name="ask_sign_off">시청을 종료 하시겠습니까?</string>
    <string name="vod_off_message">컨텐츠 시청을 종료 하시겠습니까?</string>
    <string name="input_popkon" formatted="false">%s 개수를 입력해주세요.</string>
    <string name="coin_current_count_title" formatted="false">보유 %s : %s개</string>
    <string name="coin_present" formatted="false">%s 선물</string>
    <string name="coin_purchase" formatted="false">%s 구매</string>
    <string name="select_popkon" formatted="false">%s%s을 선택해주세요.</string>
    <string name="celuv_luv" formatted="false">%s 후원</string>
    <string name="event_popkon_head">이벤트</string>
    <string name="event_popkon" formatted="false">이벤트 %s</string>
    <string name="luxury_popkon_head">럭셔리</string>
    <string name="luxury_popkon" formatted="false">럭셔리 %s</string>
    <string name="doosan_popkon" formatted="false">두산 %s</string>
    <string name="repeat_popkon" formatted="false">연속 %s</string>
    <string name="access_fail_noti" formatted="false">도배성 채팅으로 인해 채팅이 제한되었습니다.\n%d초 후에 채팅 가능합니다.</string>
    <string name="report">신고하기</string>
    <string name="reply_delete">삭제하기</string>
    <string name="reply_delete_msg">댓글을 삭제하시겠습니까?</string>
    <string name="reply_reply_delete_msg">답글을 삭제하시겠습니까?</string>
    <string name="success_delete_reply">삭제하였습니다.</string>
    <string name="input_report">신고 사유를 입력해주세요.</string>
    <string name="input_direct">직접입력</string>
    <string name="input_chat">채팅입력</string>
    <string name="popkon_normal" formatted="false">%s : %s개</string>
    <string name="ask_present" formatted="false">%s을(를) 선물하시겠습니까?</string>
    <string name="ask_present2" formatted="false">%s %s개를 선물하시겠습니까?</string>
    <string name="notice_popkon_repeat_time">네트워크 상태에 따라 선물시간에 변동이 있을 수 있습니다.</string>
    <string name="ask_present_caramel">카라멜팝콘을 선물하시겠습니까?</string>
    <string name="ask_present_sweet">스위트팝콘을 선물하시겠습니까?</string>
    <string name="ask_present_onion">어니언팝콘을 선물하시겠습니까?</string>
    <string name="popkon_caramel">카라멜팝콘</string>
    <string name="popkon_sweet">스위트팝콘</string>
    <string name="popkon_onion">어니언팝콘</string>
    <string name="item_goldrose">골드로즈</string>
    <string name="item_perfume">향수</string>
    <string name="item_shoes">구두</string>
    <string name="item_bag">고급핸드백</string>
    <string name="item_goldbar">골드바</string>
    <string name="item_diamondring">다이아반지</string>
    <string name="item_sportscar">스포츠카</string>
    <string name="item_yacht">요트</string>
    <string name="item_penthouse">펜트하우스</string>
    <string name="present">선물하기</string>
    <string name="recommended">이미 추천하였습니다.</string>
    <string name="hot">HOT</string>
    <string name="full">Full</string>
    <string name="now_best">NOW BEST</string>
    <string name="ask_block" formatted="false">%s 님을 강퇴 시키겠습니까?</string>
    <string name="warn_count" formatted="false">채팅 %s 동안 차단되어 있습니다</string>
    <string name="m">분</string>
    <string name="s">초</string>
    <string name="watch_hint_freeze_chatting">채팅사용 불가</string>
    <string name="watch_hint_chatting">채팅을 입력해 주세요~!</string>
    <string name="network_3g_lte_using">3G/LTE 사용 알림</string>
    <string name="network_3g_lte_dismiss">3G/LTE 사용 알림 해제</string>
    <string name="notice_3g_lte2">이동통신망(3G/LTE 등)으로 접속 시 데이터 요금이 발생할 수 있습니다.\n아래 옵션 또는 설정 메뉴를 통해 알림 팝업을 끌 수 있습니다.</string>
    <string name="guideline_and_policy">준수사항 및 정책</string>
    <string name="agree">"  동의함"</string>
    <string name="disagree">"  동의 안함"</string>
    <string name="guideline_message" formatted="false"><![CDATA[<br><br> 아래 내용의 방송을 하지 않겠습니다.<br><br>
- 저작권 침해<br>
- 저속/음란한 방송<br>
- 사생활, 초상권 침해<br>
- 욕설/언어폭력<br>
- 19세 이상 제한 없이 사행성, 음주, 흡연장면<br>
- 19세 이상 제한 없이 잔인, 폭력적인 장면<br>
- 공공질서 및 미풍양속에 위배되는 방송<br><br>
위 내용의 방송이 신고, 적발될 경우 서비스 이용에 제한을 받을 수 있으며, 이용정지 및 선물 받은 %s이(가) 취소될 수 있습니다.<br>
또한, 제재조치와는 별도로 관련법에 의거 형사처벌 받거나 손해배상청구를 당할 수 있습니다.<br>
본 방송에 출연하는 자들에 대하여 해당 방송자가 사전 동의를 받았음을 전제로 하는바, 만약 동의하지 않는 경우에는 지체 없이 이를 회사에 알려주시기 바랍니다.<br><br>
동의 시 일주일간 알리지 않습니다.<br><br><br><br>]]></string>
    <string name="policy_message" formatted="false"><![CDATA[<br><br>
%s는(은) 청소년들이 유해 정보에 접근할 수 없도록 방지하는 인증 장치 및 관리 조치를 취하고 있으며, 청소년이 건전한 인격체로 성장할 수 있도록 청소년 보호 정책 수립 및 시행에 최선을 다하고 있습니다.<br><br>
1.%s는(은) 만 19세 이상의 성인만 방송이 가능합니다.<br><br>
2.%s는(은) 아주 작은 욕설이나 음주 흡연도 성인 컨텐츠로 분류되어 청소년의 접근을 차단합니다.<br><br>
3.%s의 모든 회원은 본인 인증된 회원이며 청소년의 경우 성인컨텐츠를 엄격하게 차단하여 절대 접근을 할 수 없습니다.<br><br>
4.%s는(은) 방송통신심의위원회의 \'원스트라이크아웃제도\'를 시행 및 준수하고 있으며 청소년의 불법유해정보 유통 근절을 위하여 24시간 실시간 모니터링을 진행하고 있습니다.]]></string>
    <string name="guideline_policy_title">아동 및 청소년 보호정책 / 방송 준수 사항</string>
    <string name="policy_event_push_title">이벤트 푸시 알림 수신 동의 (선택)</string>
    <string name="gift_space">선  물</string>
    <string name="cancel_space">취  소</string>
    <string name="item_present">아이템 선물</string>
    <string name="input_presented_id">선물대상 아이디 입력</string>
    <string name="ask_gift" formatted="false">%s\n선물하시겠습니까?</string>
    <string name="register_date">등록일</string>
    <string name="title">제목</string>
    <string name="is_answer">답변여부</string>
    <string name="section">구분</string>
    <string name="insert_title">제목을 입력하세요.</string>
    <string name="input_content">내용을 입력하세요.</string>
    <string name="inquiry_content">문의 내용</string>
    <string name="inquiry">문의하기</string>
    <string name="attach_file">파일첨부</string>
    <string name="select_file">파일선택</string>
    <string name="notice_upload">10MB 이내의 이미지 파일이나 zip형식의 압축파일만 업로드 가능합니다.</string>
</resources>