<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_bg"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/main_text"
        android:textSize="@dimen/txt_dialog_title"
        android:text="@string/network_3g_lte_using"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/text_login_policy_message_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice_3g_lte2"
            android:textColor="#4D4D4D"
            android:textSize="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center|left"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_3g_lte_dismiss"
                android:textColor="@android:color/holo_red_light"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_xml"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#444444"/>

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/btn_ok_xml"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/popup_ok_text"
            android:textSize="@dimen/txt_button"/>

    </LinearLayout>

</LinearLayout>