<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_bg"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_present"
                android:textColor="@color/main_text"
                android:textSize="@dimen/txt_dialog_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/present_border_box"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:inputType="textUri"
                android:maxLines="1"
                android:maxLength="25"
                android:hint="@string/input_presented_id"
                android:textColorHint="#a3a3a3"/>

            <TextView
                android:id="@+id/btn_check"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:gravity="center"
                android:background="@color/main_bg"
                android:text="@string/ok"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_gift_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/ask_gift"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_xml"
            android:gravity="center"
            android:text="@string/cancel_space"
            android:textColor="#444444"/>

        <TextView
            android:id="@+id/btn_gift"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/btn_ok_xml"
            android:gravity="center"
            android:text="@string/gift_space"
            android:textColor="@color/popup_ok_text"
            android:textSize="@dimen/txt_button"/>

    </LinearLayout>

</LinearLayout>