<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFFFFF"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        android:background="@color/main_bg"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/Toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/title"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.8"
                    android:hint="@string/insert_title"
                    android:maxLength="50"
                    android:textSize="13dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/section"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.8"
                    android:textSize="13dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/inquiry_content"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.8"
                    android:hint="@string/input_content"
                    android:maxLength="4000"
                    android:textSize="13dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/attach_file"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.8"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_file"
                        android:layout_width="match_parent"
                        android:layout_height="26dp"
                        android:background="@drawable/selector_center_drawable"
                        android:ellipsize="end"
                        android:enabled="false"
                        android:lines="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="13dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/notice_upload"
                        android:textSize="10dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/selector_center_drawable"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/select_file"
                    android:textColor="@drawable/selector_center_text" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_center_drawable"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/inquiry"
                    android:textColor="@drawable/selector_center_text" />

                <TextView
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_center_drawable"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textColor="@drawable/selector_center_text" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>